--- a/src/index.html
+++ b/src/index.html
@@ -11,3 +11,5 @@
   <app-root></app-root>
 </body>
 </html>
+<!--Import Google Icon Font-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
